alteração texto na nova branch

--- a/projeto-desenv-bem/grid.html
+++ b/projeto-desenv-bem/grid.html
@@ -60,6 +60,14 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-xs-12">
+          <div style="background-color: grey; color: #fff">
+            <h1>Rodapé</h1>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </body>
